[TSO-4] AccountController finished

--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfiguration": {
+    "Issuer": "TCD-SingleSignOn",
+    "Audience": "TCD-SingleSignOn",
+    "TokenLifetime": 7,
+    "SecretKey": "9z$C&F)J@NCRfTjWnZr4u7x!A%D*G-Ua"
+  }
 }
