--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -14,6 +14,9 @@
       <Reference Include="WebApiBaseLibrary, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>..\..\..\..\WebApiBaseLibrary\WebApiBaseLibrary\bin\Release\net5.0\WebApiBaseLibrary.dll</HintPath>
       </Reference>
+      <Reference Include="WebApiBaseLibrary.Authorization, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>..\..\..\..\WebApiBaseLibrary\WebApiBaseLibrary.Authorization\bin\Release\net5.0\WebApiBaseLibrary.Authorization.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
