[TSO-9] Added AccountContext, PostgreSQL provider, Account Entity

--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -12,5 +12,8 @@
     "Audience": "TCD-SingleSignOn",
     "TokenLifetime": 7,
     "SecretKey": "9z$C&F)J@NCRfTjWnZr4u7x!A%D*G-Ua"
+  },
+  "ConnectionStrings": {
+    "PostgreSqlAws": "Server=52.57.106.5; Port=5433; Database=TileGame; Username=TileGame; password=TileGame;"
   }
 }
