--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -14,6 +14,6 @@
     "SecretKey": "9z$C&F)J@NCRfTjWnZr4u7x!A%D*G-Ua"
   },
   "ConnectionStrings": {
-    "PostgreSqlAws": "Server=52.57.106.5; Port=5433; Database=TileGame; Username=TileGame; password=TileGame_Secret_Password ;"
+    "PostgreSqlAws": "Server=52.57.106.5; Port=5433; Database=TileGame; Username=TileGame; password=TileGame_Secret_Password; Schema=SSO"
   }
 }
