--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,42 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. 
 # See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build:  
+  build_job:
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the tag on this image to a more stable version, using latest can result in unstable builds.
     docker:
-      - image: microsoft/dotnet:latest
+      - image: mcr.microsoft.com/dotnet/sdk:5.0
     steps:
       # Checkout the code as the first step.
       - checkout
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
           # Update this line with the directory that contains your tests project file
-          working_directory: ~/Sources/
+          working_directory: ./Source/SingleSignOn/
           name: Run Build
           command: |
-            dotnet build
-            
+            echo "I am here now [ $(pwd) ]"
+            dotnet build .
 
+version: 2.1
+orbs:
+  jira: circleci/jira@1.3.1
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample: 
+  sample_build:
     jobs:
-      - build
+      - build_job:
+          # context: test_circleci_context
+          name: Build
+          post-steps:
+            - jira/notify:
+              # environment_type: development
+              # job_type: deployment
+
+
