--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -10,6 +10,13 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        
+        <!-- WebApiBasLibrary -->
+        <PackageReference Include="WebApiBaseLibrary" Version="1.0.0.0" />
+        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.0.0" />
+        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.0.0" /> 
+        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.0.0" />
+        
     </ItemGroup>
 
     <ItemGroup>
