--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -12,11 +12,11 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         
         <!-- WebApiBasLibrary -->
-        <PackageReference Include="WebApiBaseLibrary" Version="1.0.0.0" />
-        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.0.0" />
-        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.0.0" /> 
-        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.0.0" />
-        
+        <PackageReference Include="WebApiBaseLibrary" Version="1.0.0.0-develop" />
+        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.0.0-develop" />
+        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.0.0-develop" /> 
+        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.0.0-develop" />
+
     </ItemGroup>
 
     <ItemGroup>
