Updated to WebApiBaseLibrary 1.0.2-develop

--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -13,6 +13,9 @@
     "TokenLifetime": 7,
     "SecretKey": "9z$C&F)J@NCRfTjWnZr4u7x!A%D*G-Ua"
   },
+  "HashConfiguration": {
+    "Salt": "TestSalt"
+  },
   "ConnectionStrings": {
     "PostgreSqlAws": "Server=52.57.106.5; Port=5433; Database=TCD_SSO; Username=TCD_SSO_Master; password=uEYsKTvPw7i2w4eGjWRzuAN5T;"
   }
