--- a/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
+++ b/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
@@ -5,6 +5,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
-        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.0-release"/>
+        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.2-develop"/>
     </ItemGroup>
 </Project>
