--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -6,17 +6,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="9.0.0" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-        <PackageReference Include="WebApiBaseLibrary" Version="1.0.0-release" />
-        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.0-release" />
-        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.0-release" />
+        <PackageReference Include="MediatR" Version="9.0.0"/>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+        <PackageReference Include="WebApiBaseLibrary" Version="1.0.2-develop"/>
+        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.2-develop"/>
+        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.2-develop"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SingleSignOn.DataAccess\SingleSignOn.DataAccess.csproj" />
+        <ProjectReference Include="..\SingleSignOn.DataAccess\SingleSignOn.DataAccess.csproj"/>
     </ItemGroup>
 </Project>
