--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -2,7 +2,8 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <IsPackable>true</IsPackable>
-        <Version>1.0.1</Version>
+        <VersionPrefix>1.0.1</VersionPrefix>
+        <VersionSuffix>develop</VersionSuffix>
     </PropertyGroup>
 
     <ItemGroup>
