--- a/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+++ b/Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
@@ -12,9 +12,9 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
-        <PackageReference Include="WebApiBaseLibrary" Version="1.0.2-develop"/>
-        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.2-develop"/>
-        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.2-develop"/>
+        <PackageReference Include="WebApiBaseLibrary" Version="1.0.3"/>
+        <PackageReference Include="WebApiBaseLibrary.Authorization" Version="1.0.3"/>
+        <PackageReference Include="WebApiBaseLibrary.Infrastructure" Version="1.0.3"/>
     </ItemGroup>
 
     <ItemGroup>
