--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,8 @@ workflows:
           context: Tokens
           project_name: SingleSignOn
           post-steps:
-            - jira/notify
+            - jira/notify:
+                environment_type: development
       
       - pack_code:
           name: Pack and push to Artifactory
@@ -130,4 +131,5 @@ workflows:
           context: Tokens
           project_name: SingleSignOn
           post-steps:
-            - jira/notify
+            - jira/notify:
+                environment_type: staging
