--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,32 +104,117 @@ jobs:
             --store-password-in-clear-text   
       
             dotnet nuget push Nuget/ --source "${PROJECT_NAME}_Artifactory"
+
+  build_image:
+    parameters: # parameters are at the job level
+      project_name:
+        type: string
+        default: Dummy_project
+      image_name:
+        type: string
+        default: test_tcd
+    environment:
+      PROJECT_NAME: "<< parameters.project_name >>"
+      IMAGE_NAME: "tcd.jfrog.io/tcd-docker/<< parameters.image_name >>"
+    executor:
+    docker:
+      - image: circleci/golang:1.15
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.6
+      - run:
+          name: Setup Environment variables
+          command: |
+            set -ex
+            if [[ "$CIRCLE_BRANCH" == "develop" ]];
+            then
+              VSUFFIX=$CIRCLE_BRANCH
+            elif [[ "$CIRCLE_BRANCH" == "release" ]];
+            then
+              VSUFFIX=""
+            elif [[ "$CIRCLE_BRANCH" == "feature/RE-25" ]];
+            then
+              VSUFFIX=testing
+            fi
+
+            ProjectPath=./Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+            echo """export AppVersion=$(grep "<VersionPrefix>.*</VersionPrefix>" $ProjectPath \
+                                     | sed -E 's/<.{0,1}VersionPrefix>//g' \
+                                     | sed -E 's/^[ \t]*//g')""" >> $BASH_ENV
+            echo "export VSUFFIX=$VSUFFIX" >> $BASH_ENV
+
+      - run:
+          name: Build Docker Image
+          command: |
+            set -ex
+
+            docker build --tag $IMAGE_NAME:$AppVersion-$VSUFFIX \
+              --build-arg NUGET_REPO_URL=$ARTIFACTORY_URL \
+              --build-arg NUGET_REPO_USER=$ARTIFACTORY_USER \
+              --build-arg NUGET_REPO_PASS=$ARTIFACTORY_PASSWORD \
+              --file ./Resources/Docker/Dockerfile .
+      - run:
+          name: Login to TCD Artifactory
+          command: |
+            set -ex
+
+            echo $ARTIFACTORY_PASSWORD | docker login -u $ARTIFACTORY_USER --password-stdin tcd.jfrog.io
+
+      - run:
+          name: Push Docker Image
+          command: |
+            set -ex
+
+             docker push $IMAGE_NAME:$AppVersion-$VSUFFIX
+
+
             
 version: 2.1
 orbs:
   jira: circleci/jira@1.3.1
+  docker: circleci/docker@1.6.0
+
 workflows:
   BuildFlow:
     jobs:
-      - build_code:
-          name: Build code
+#      - build_code:
+#          name: Build Code
+#          context: Tokens
+#          project_name: SingleSignOn
+#          post-steps:
+#            - jira/notify:
+#                environment_type: development
+
+#      - pack_code:
+#          name: Pack and push nugets to Artifactory
+#          requires:
+#            - "Build Code"
+#          filters:
+#            branches:
+#              only:
+#              - develop
+#              - release
+#          context: Tokens
+#          project_name: SingleSignOn
+#          post-steps:
+#            - jira/notify:
+#                environment_type: staging
+
+      - build_image:
+          name: Docker Image Build
+#          requires:
+#            - "Build Code"
+#            - "Pack and push nugets to Artifactory"
+          filters:
+            branches:
+              only:
+                - develop
+                - release
+                - feature/RE-25
           context: Tokens
           project_name: SingleSignOn
+          image_name: test_tcd_sso
           post-steps:
             - jira/notify:
                 environment_type: development
-      
-      - pack_code:
-          name: Pack and push to Artifactory
-          requires:
-            - "Build code"
-          filters:
-            branches: 
-              only:
-              - develop
-              - release
-          context: Tokens
-          project_name: SingleSignOn
-          post-steps:
-            - jira/notify:
-                environment_type: staging
