--- a/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
+++ b/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
@@ -5,7 +5,10 @@
 
     <!-- Libs from nuget.org -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
-        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.3"/>
+        <PackageReference Include="FluentValidation" Version="10.3.1" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.0.3" />
     </ItemGroup>
 </Project>
