--- a/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
+++ b/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
@@ -24,7 +24,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SSO_DB_CONNECTION_STRING": "Server=52.57.106.5; Port=5433; Database=TCD_SSO; Username=TCD_SSO_Master; password=uEYsKTvPw7i2w4eGjWRzuAN5T;"
       }
     }
   }
