--- a/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
+++ b/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SingleSignOn": {
+    "Development": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
