[TSO-19] Used 5005 and 5004 ports

--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -16,5 +16,5 @@
   "HashConfiguration": {
     "Salt": "TestSalt"
   },
-  "Urls": "http://[:]:44317"
+  "Urls": "https://localhost:5005;http://localhost:5004"
 }
