[RE-25] Adding Dockerfile and certificate for building image
Adjusting CircleCI pipeline config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 executors:
   dotnet_executor:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:5.0
+      - image: mcr.microsoft.com/dotnet/sdk:5.0-alpine3.13
 
 jobs:
   build_code:
@@ -122,7 +122,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.6
+          version: 20.10.7
       - run:
           name: Setup Environment variables
           command: |
@@ -135,24 +135,38 @@ jobs:
               VSUFFIX=""
             elif [[ "$CIRCLE_BRANCH" == "feature/RE-25" ]];
             then
-              VSUFFIX=testing
+              VSUFFIX=develop
             fi
 
             ProjectPath=./Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
             echo """export AppVersion=$(grep "<VersionPrefix>.*</VersionPrefix>" $ProjectPath \
                                      | sed -E 's/<.{0,1}VersionPrefix>//g' \
                                      | sed -E 's/^[ \t]*//g')""" >> $BASH_ENV
-            echo "export VSUFFIX=$VSUFFIX" >> $BASH_ENV
+            [ -n "$VSUFFIX" ] && echo """export VSUFFIX="-$VSUFFIX" """" >> $BASH_ENV
 
       - run:
           name: Build Docker Image
           command: |
             set -ex
 
-            docker build --tag $IMAGE_NAME:$AppVersion-$VSUFFIX \
+            docker build --tag $IMAGE_NAME:$AppVersion$VSUFFIX \
               --build-arg NUGET_REPO_URL=$ARTIFACTORY_URL \
               --build-arg NUGET_REPO_USER=$ARTIFACTORY_USER \
               --build-arg NUGET_REPO_PASS=$ARTIFACTORY_PASSWORD \
+
+              --build-arg CERTIFICATE_PASSWORD=$CERTIFICATE_PASSWORD \
+              --build-arg DATABASE_HOST=$DATABASE_HOST \
+              --build-arg DATABASE_PORT=$DATABASE_PORT \
+              --build-arg DATABASE_NAME=$DATABASE_NAME \
+              --build-arg DATABASE_USERNAME=$DATABASE_USERNAME \
+              --build-arg DATABASE_PASSWORD=$DATABASE_PASSWORD \
+
+              --build-arg CORE_RABBITMQ_HOSTNAME=$CORE_RABBITMQ_HOSTNAME \
+              --build-arg CORE_RABBITMQ_PORT=$CORE_RABBITMQ_PORT \
+              --build-arg CORE_RABBITMQ_USERNAME=$CORE_RABBITMQ_USERNAME \
+              --build-arg CORE_RABBITMQ_PASSWORD=$CORE_RABBITMQ_PASSWORD \
+              --build-arg CORE_RABBITMQ_VIRTUALHOST=$CORE_RABBITMQ_VIRTUALHOST \
+
               --file ./Resources/Docker/Dockerfile .
       - run:
           name: Login to TCD Artifactory
@@ -166,7 +180,7 @@ jobs:
           command: |
             set -ex
 
-             docker push $IMAGE_NAME:$AppVersion-$VSUFFIX
+             docker push $IMAGE_NAME:$AppVersion$VSUFFIX
 
 
             
@@ -212,9 +226,11 @@ workflows:
                 - develop
                 - release
                 - feature/RE-25
-          context: Tokens
+          context:
+           - Tokens
+           - Connection_Details
           project_name: SingleSignOn
-          image_name: test_tcd_sso
+          image_name: tcd_sso
           post-steps:
             - jira/notify:
                 environment_type: development
