--- a/Source/SingleSignOn/SingleSignOn/appsettings.Development.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "JwtConfiguration": {
+    "Issuer": "TCD-SingleSignOn",
+    "Audience": "TCD-SingleSignOn",
+    "TokenLifetime": 7,
+    "SecretKey": "9z$C&F)J@NCRfTjWnZr4u7x!A%D*G-Ua"
+  },
+  "HashConfiguration": {
+    "Salt": "TestSalt"
+  },
+  "Urls": "https://[:]:5005;http://[:]:5004"
 }
