--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -16,5 +16,5 @@
   "HashConfiguration": {
     "Salt": "TestSalt"
   },
-  "Urls": "https://localhost:5005;http://localhost:5004"
+  "Urls": "https://[:]:5005;http://[:]:5004"
 }
